fixed overflow issue by deleting htm class

--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
   padding: 0;
   
 }
-
-body{
-  margin: 0;
+html{
   overflow-x: hidden;
+}
+ body{
+  margin: 0;
   scroll-behavior: smooth;
   background: #2D322B;
   color: #E3DFD6; 
@@ -20,15 +21,7 @@ body{
   width: 0px;
 }
 
-.malithebrand__center-div{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
- 
-  
-  
-}
+
 .malithebrand__app-container{
   margin: 0;
   padding: 0;
@@ -412,10 +405,9 @@ a{
 
 @media screen and (max-width: 1350px ) {
 
-
 }  
 @media screen and (max-width: 700px ) {
-  html,body{
+  html, body{
    
     overflow-x: hidden;
   }
